--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,11 @@ log
 
 
 /Prepare_to_HW0.patch
+/1_0_fix.patch
+/1_1_HW0_stream.patch
+/1_2_HW0_cycle.patch
+/1_3_HW0_optional2.patch
+/1_4_switch_to_war.patch
+/1_5_add_servlet_api.patch
+/1_6_forward_to_redirect.patch
+/1_7_logging.patch
