--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,10 @@ log
 /1_5_add_servlet_api.patch
 /1_6_forward_to_redirect.patch
 /1_7_logging.patch
+/2_5_dependency_injection.patch
+/2_6_annotation_processing.patch
+/2_3_app_layers.patch
+/2_2_HW1_optional.patch
+/2_4_add_spring_context.patch
+/2_7_constructor_injection.patch
+/2_1_HW1.patch
