format patch list to "*.patch"

--- a/.gitignore
+++ b/.gitignore
@@ -3,22 +3,4 @@ out
 target
 *.iml
 log
-
-
-
-/Prepare_to_HW0.patch
-/1_0_fix.patch
-/1_1_HW0_stream.patch
-/1_2_HW0_cycle.patch
-/1_3_HW0_optional2.patch
-/1_4_switch_to_war.patch
-/1_5_add_servlet_api.patch
-/1_6_forward_to_redirect.patch
-/1_7_logging.patch
-/2_5_dependency_injection.patch
-/2_6_annotation_processing.patch
-/2_3_app_layers.patch
-/2_2_HW1_optional.patch
-/2_4_add_spring_context.patch
-/2_7_constructor_injection.patch
-/2_1_HW1.patch
+*.patch
