--- a/src/main/resources/db/hsqldb.properties
+++ b/src/main/resources/db/hsqldb.properties
@@ -1,8 +1,8 @@
-#database.url=jdbc:hsqldb:file:D:/temp/topjava
+database.url=jdbc:hsqldb:file:D:/dbTopJava
 
-database.url=jdbc:hsqldb:mem:topjava
+#database.url=jdbc:hsqldb:mem:topjava
 database.username=sa
-database.password=
+database.password=sa
 database.driverClassName=org.hsqldb.jdbcDriver
 
 database.init=true
