remove servlets, add controller, internationalization

--- a/config/messages/app.properties
+++ b/config/messages/app.properties
@@ -9,4 +9,19 @@ user.roles=Roles
 user.active=Active
 user.registered=Registered
 meal.title=Meals
+meal.add=Add Meal
+meal.update=Update
+meal.delete=Delete
+meal.filter.startdate=From Date:
+meal.filter.enddate=To Date:
+meal.filter.starttime=From Time:
+meal.filter.endtime=To Time:
+meal.filter.button=Filter
+meal.create.title=Create meal
+meal.edit.title=Edit meal
+meal.form.datetime=DateTime
+meal.form.description=Description
+meal.form.calories=Calories
+meal.form.save=Save
+meal.form.cancel=Cancel
 common.select=Select
